[package]
name = "std-threadpool"
version = "0.1.0"
edition = "2021"
description = "Threadpool implementation"
license = "MIT"
documentation = "https://docs.rs/std-threadpool"
repository = "https://github.com/Logan-010/std-threadpool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
